# hidro

./: .gitignore
backend/: Cargo.toml
backend/dro_serial_avr/: dro_serial_avr.ino
backend/src/: coordinate.rs  core.rs  lib.rs  main.rs  serial.rs  server.rs  settings.rs  trip.rs
frontend/hidro-app/: CMakeLists.txt  ControlPanel.qml  LiveAxisMonitor.qml  LiveViewPanel.qml  hidro-app_en_US.ts  main.cpp  main.qml  qml.qrc
mcu/dro_serial_sam/: dro_firmware.ino  dro_serial_sam.ino
pcb/hydro_board/: fp-lib-table  hydro_board-cache.lib  hydro_board.kicad_pcb  hydro_board.sch  sym-lib-table
