[package]
name = "hydrod"
version = "0.1.0"
authors = ["ultrasilicon <zhenghanecho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serial
serialport = "4.0.1"

# Websocket
tungstenite = "0.17.3"

# Async
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.1"

# Utils
const_format = "0.2.30"
clap = { version = "4.0.26", features = ["derive"] }

# Config related
config = "0.13.1"
shellexpand = "2.1.2"
